# kalshi_bot

./: .agent.md  .ai-context.md  .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_SUMMARY.txt  README.md  RUNBOOK.md  architecture_master.md  cli.py  config.py  deploy.sh  docker-compose.override.yml.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: __init__.py  audit_log.py  database.py
data/dlq/test/: 1781830561551_20692.json
execution/: __init__.py  engine.py  fee_tracker.py  order_state.py  position_manager.py
grafana/: dashboard.json
market/: __init__.py  order_book.py  websocket_client.py
observability/: __init__.py  alerts.py  health.py  logging_config.py  metrics.py
resilience/: __init__.py  circuit_breaker.py  dead_letter_queue.py  rate_limiter.py
safety/: __init__.py  kill_switch.py  risk_manager.py
scripts/: backtest.py  backup_db.sh  calibrate.py
strategy/: __init__.py  forecast_provider.py  macro_tracker.py
tests/: test_audit_log.py  test_hardening.py  test_kalshi.py  test_property.py  test_resilience.py
